
    YARN-3932. SchedulerApplicationAttempt#getResourceUsageReport and UserInfo 
    should based on total-used-resources. (Bibin A Chundatt via wangda)

    YARN-3954. Fix TestYarnConfigurationFields#testCompareConfigurationClassAgainstXml.
    (varun saxena via rohithsharmaks)

    YARN-3956. Fix TestNodeManagerHardwareUtils fails on Mac (Varun Vasudev via wangda)

    YARN-3941. Proportional Preemption policy should try to avoid sending duplicate PREEMPT_CONTAINER event to scheduler. (Sunil G via wangda)

    YARN-3900. Protobuf layout of yarn_security_token causes errors in other protos
    that include it (adhoot via rkanter)

    YARN-3845. Scheduler page does not render RGBA color combinations in IE11. 
    (Contributed by Mohammad Shahid Khan)

    YARN-3957. FairScheduler NPE In FairSchedulerQueueInfo causing scheduler page to 
    return 500. (Anubhav Dhoot via kasha)

Release 2.7.2 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    YARN-3170. YARN architecture document needs updating. (Brahma Reddy Battula
    via ozawa)

    YARN-3967. Fetch the application report from the AHS if the RM does not know about it.
    (Mit Desai via xgong)

  OPTIMIZATIONS

  BUG FIXES

    YARN-3793. Several NPEs when deleting local files on NM recovery (Varun
    Saxena via jlowe)

    YARN-3508. Prevent processing preemption events on the main RM dispatcher. 
    (Varun Saxena via wangda)

    YARN-3690. [JDK8] 'mvn site' fails. (Brahma Reddy Battula via aajisaka)

    YARN-3905. Application History Server UI NPEs when accessing apps run after
    RM restart (Eric Payne via jeagles)

    YARN-3535. Scheduler must re-request container resources when RMContainer transitions
    from ALLOCATED to KILLED (rohithsharma and peng.zhang via asuresh)

    YARN-3878. AsyncDispatcher can hang while stopping if it is configured for
    draining events on stop. (Varun Saxena via jianhe)

    YARN-3969. Allow jobs to be submitted to reservation that is active 